kubernetes/user-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: user-service

spec:
  replicas: 1

  selector:
    matchLabels:
      app: user-service

  template:
    metadata:
      labels:
        app: user-service

    spec:
      imagePullSecrets:
        - name: gitlab-registry

      containers:
        - name: user-service
          image: registry.gitlab.com/unrulybarb/veleda/user-service:b75b7e8b
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
